Fixed logo white flicker on load. Add slide in for logo and wasd

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -1,11 +1,3 @@
-.homeLink {
-  color: inherit;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
 .title_container {
   padding: 0;
   margin: 0;
@@ -16,17 +8,47 @@
   top: 10px;
   left: 10px;
   z-index: 99;
-  cursor: pointer;
+  cursor: default;
+}
+
+.homeLink {
+  color: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
 }
 
 .logo_block {
+  margin-top: 5px;
   display: flex;
   flex-direction: row;
-  z-index: 99;
+  justify-content: space-between;
 }
 
-.logo_block img {
-  margin-top: 5px;
+.logos {
   margin-right: 5px;
-  background-color: white;
+  margin-bottom: 40px;
+  background: white;
+  opacity: 0;
+  animation: fade_in;
+  animation-delay: 5s;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+.title_container:hover { 
+  cursor: pointer;
+}
+
+@keyframes fade_in {
+  0% {
+    opacity: 0;
+    margin-bottom: 40px;
+  }
+  100% {
+    opacity: 1;
+    margin-bottom: 0rem;
+  }
 }
